--- a/components/backend-tests-go-rztulkwo/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-rztulkwo/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-rztulkwo
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.8
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-rztulkwo:9a671902970a71c04dfa9727d954d175b95fcd65@sha256:e460f03ffe8a5d7a57e0c3e8e70da8e8756e3bd19b2e561bfbe2fa9d2f1502fb
+          name: container-image
